# GrowthNet

./: .gitignore  .venv  CLAUDE.md  README.md  _gen_interpolation_viz.py  active_compound_analysis.ipynb  cluster_scaffolds_gneprop.py  interpolation_viz.ipynb  launch_sweep.sh  pearson_nan_analysis.md  playground.ipynb  pyproject.toml  test_train_split_clusters.py
growthcurve.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
growthnet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: batch_correction_methodology.md  build_compound_metas.py  build_representation_dict.py  build_representation_dict.sh  build_training_data.py  dmso_threshold_methodology.md  generate_methodology_figures.py  investigate_smiles.ipynb  load_evaluate_model.ipynb  make_augmented_validation_dense.py  make_splits.py  make_test.ipynb  make_train_test_Celine_clusters.ipynb  make_train_test_Celine_clusters.py  models.py  normalize_DR_dataset.ipynb  normalize_Enamine_t6_t12.ipynb  normalize_GrowthCurve_2700_cmpds.ipynb  normalize_GrowthCurve_2700_cmpds_v2.ipynb  playground.ipynb  run_inference.py  save_df_fingerprints.py  val_test_similiraty.py  verify_split_v1.py
sweeps/: conc_encoding_sweep.py  conc_encoding_sweep.yml  data_class.ipynb  data_class.py  evaluate_model.ipynb  multihead_sweep.yml  sweep_multihead.py  sweep_multihead_copy.py  sweep_multihead_lightning.py  time_encoding_sweep.py  time_encoding_sweep.yml  top30_sweep_analysis.ipynb  validate_normalization_sweep.py
